# real_estate_ai_agent

./: .env.example  .gitignore  LICENSE  PRIVACY.md  README.md  TERMS.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: buy_workflow.yml  rent_workflow.yml
.github/workflows/: advance.yml  ci.yml  discover.yml  intake.yml  nightly.yml  on_comment.yml  pages.yml  setup_labels.yml
adapters/listings/: craigslist.yaml  gumtree_uk.yaml  onthemarket.yaml  openrent.yaml  rightmove_search.yaml  spareroom.yaml  zoopla_search.yaml
adapters/locks/: home_assistant.yaml
adapters/offer_forms/: england_assured_shorthold.yaml
adapters_runtime/: listings_runtime.py  llm_search_runtime.py
docs/: adapter-authoring.md  agent-api.md  architecture.md  hitl-protocol.md
engine/: crypto.py  eligibility.py  extractor.py  pricing.py  schemas.py  state_machine.py
engine/prompts/: email_parse_v1.md  offer_draft_v1.md  (+3 more)
examples/: sample_buy_intake.json  sample_rent_intake.json
rules/: buying_v1.yaml  matching_v1.yaml  renting_v1.yaml
search-proxy/: wrangler.toml
site/: config.js  index.html
tests/: test_crypto.py  test_discover.py  test_eligibility.py  test_extractor.py  test_intake.py  test_issue_io.py  test_listings_runtime.py  test_on_comment.py  test_pricing.py  test_schemas.py  test_state_machine.py  test_workflows_lib.py
workflows_lib/: advance_action.py  application.py  discover.py  discover_action.py  due_diligence.py  intake.py  intake_action.py  issue_io.py  lease.py  nightly_action.py  notify.py  offer.py  on_comment.py  on_comment_action.py  viewings.py
(+18 files in other folders)
