[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "real-estate-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pynacl>=1.5",
    "pyyaml>=6.0",
    "pydantic>=2.7",
    "python-frontmatter>=1.1",
    "requests>=2.31",
    "ddgs>=9.14.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"

[tool.setuptools.packages.find]
where = ["."]
include = ["engine*", "workflows_lib*"]
